# OS_Labs

./: README.md
CW/: main.cpp
lab1/: child.c  main.c
lab2/: input.txt  input2.txt  main.cpp
lab3/: main.c
lab4/: CMakeLists.txt
lab4/GCFLib/: GCF.cpp  GCF.hpp
lab4/SquareLib/: Square.cpp  Square.hpp
lab4/src/: main.cpp  main2.cpp
lab5-7/src/: child.c  main.c  msg_q.c  orchestra.c  tree.c
